Refine styles: adjust gradients, shadows, and text alignment; expand CSS variables for improved design flexibility and consistency.

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
   <nav class="container text-transparent mx-auto px-8 flex justify-between items-center" role="navigation"
        aria-label="Main">
     <a href="#intro"
-       class="text-md md:text-lg xl:text-2xl font-medium tracking-tight bg-clip-text bg-gradient-to-r from-slate-300 to-slate-400 "
+       class="text-md md:text-lg xl:text-2xl font-medium tracking-tight bg-clip-text bg-gradient-to-r from-slate-500 to-slate-400 "
        aria-label="Inicio">
       SOFTWARE BIOBIO
     </a>
@@ -272,10 +272,10 @@
       </li>
       <li role="none">
         <a href="#contact"
-           class="py-2 px-1 relative font-light text-sm md:text-md xl:text-lg text-slate-600 hover:text-slate-900 dark:text-white text-white dark:text-slate-300 dark:hover:dark:text-slate-100 transition-colors duration-300"
+           class="py-2 px-1 relative font-light text-sm md:text-md xl:text-lg text-slate-600 hover:text-slate-900 dark:text-slate-300 dark:hover:dark:text-slate-100 transition-colors duration-300"
            role="menuitem" aria-label="Ir a la sección de contacto">
            <span class="relative flex items-center gap-2">
-             <i class="fa-solid fa-envelope text-slate-500/80 dark:text-white text-white dark:text-slate-300/80 text-base" aria-hidden="true"></i>
+             <i class="fa-solid fa-envelope text-slate-500/80 dark:text-slate-300/80 text-base" aria-hidden="true"></i>
              Contacto
            </span>
         </a>
@@ -328,7 +328,7 @@
 </div>
 
 <main id="main-content" role="main" tabindex="-1">
-  <section id="intro" class="bg-gradient-to-b from-white to-[#cde] dark:via-transparent dark:from-slate-900 dark:to-slate-800 min-h-screen flex items-center justify-center px-4 relative overflow-hidden">
+  <section id="intro" class="bg-gradient-to-b from-white to-[#dedede] dark:via-transparent dark:from-slate-900 dark:to-slate-800 min-h-screen flex items-center justify-center px-4 relative overflow-hidden">
 
     <svg
       class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 w-[600px] h-[600px] text-sky-50 dark:text-slate-900"
@@ -362,8 +362,8 @@
     <div class="max-w-5xl mx-auto z-10 relative flex flex-col items-center justify-center" data-aos="fade-up">
       <div class="text-center mb-16">
         <h1 class="text-5xl md:text-7xl font-light dark:text-slate-100 tracking-tight leading-none mb-6">
-          <span class="text-transparent bg-clip-text bg-gradient-to-r from-sky-600 to-sky-600 dark:from-white dark:via-sky-300 dark:to-white block mb-2 drop-shadow-md dark:drop-shadow-cyan-800">Soluciones informáticas</span>
-          <span class="text-transparent bg-clip-text bg-gradient-to-r from-white to-amber-400 dark:from-white dark:to-yellow-300 drop-shadow-md">
+          <span class="text-transparent bg-clip-text bg-gradient-to-r from-sky-400 to-sky-600 dark:from-white dark:via-sky-300 dark:to-white block mb-2 drop-shadow-md dark:drop-shadow-cyan-800">Soluciones informáticas</span>
+          <span class="text-transparent bg-clip-text bg-gradient-to-r from-amber-300 to-amber-400 dark:from-white dark:to-yellow-300 drop-shadow-xl">
           a medida
         </span>
         </h1>
@@ -397,7 +397,7 @@
     </a>
   </section>
 
-  <section id="services" class="min-h-screen bg-gradient-to-b from-[#cde] to-[#eef]  dark:bg-gradient-to-b dark:from-slate-800 dark:to-slate-900 py-32 relative overflow-hidden">
+  <section id="services" class="min-h-screen bg-gradient-to-b from-[#dedede] to-[#eee]  dark:bg-gradient-to-b dark:from-slate-800 dark:to-slate-900 py-32 relative overflow-hidden">
 
     <!-- Minimal decorative elements -->
     <div class="max-w-6xl mx-auto px-6 relative z-10">
@@ -425,7 +425,7 @@
           </div>
 
           <div
-            class="md:w-2/3 bg-sky-50 dark:bg-slate-800/50 backdrop-blur-sm rounded-xl p-12 shadow-lg shadow-slate-400 dark:shadow-black dark:shadow-inner transition-all duration-300 hover:border-slate-400/10">
+            class="md:w-2/3 bg-white dark:bg-slate-800/50 rounded-xl p-12 shadow-lg shadow-slate-400 dark:shadow-black dark:shadow-inner transition-all duration-300 hover:border-slate-400/10">
             <h4 class="text-xl md:text-2xl font-light text-base mb-8 tracking-tight">Integración de Dispositivos y
               Protocolos</h4>
             <p class="text-slate-600 dark:text-slate-300 font-light mb-12">
@@ -500,7 +500,7 @@
           </div>
 
           <div
-            class="md:w-2/3 bg-sky-50 dark:bg-slate-800/50 backdrop-blur-sm rounded-xl p-12 shadow-xl shadow-slate-400 dark:shadow-black dark:shadow-inner transition-all duration-300 hover:border-slate-400/10">
+            class="md:w-2/3 bg-white dark:bg-slate-800/50 backdrop-blur-sm rounded-xl p-12 shadow-xl shadow-slate-400 dark:shadow-black dark:shadow-inner transition-all duration-300 hover:border-slate-400/10">
             <div class="grid grid-cols-1 md:grid-cols-2 gap-16">
               <div>
                 <h4 class="text-xl md:text-2xl font-light text-base mb-6 tracking-tight">Desarrollo Full-Stack</h4>
@@ -566,7 +566,7 @@
           </div>
 
           <div
-            class="md:w-2/3 bg-sky-50 dark:bg-slate-800/50 backdrop-blur-sm rounded-xl p-12 shadow-xl shadow-slate-400 dark:shadow-black dark:shadow-inner transition-all duration-300 hover:border-slate-400/10">
+            class="md:w-2/3 bg-white dark:bg-slate-800/50 backdrop-blur-sm rounded-xl p-12 shadow-xl shadow-slate-400 dark:shadow-black dark:shadow-inner transition-all duration-300 hover:border-slate-400/10">
             <div class="grid grid-cols-1 md:grid-cols-2 gap-16">
               <div>
                 <h4 class="text-xl md:text-2xl font-light text-base mb-6 tracking-tight">Asesoría y Arquitectura de
@@ -623,7 +623,7 @@
       <!-- Commitment section - clean and minimal -->
       <div class="mt-40 text-center">
         <div
-          class="bg-white dark:bg-[#012] backdrop-blur-sm rounded-xl p-16 border  shadow-inner
+          class="bg-white dark:bg-slate-800 backdrop-blur-sm rounded-xl p-16 border  shadow-inner
            dark:shadow-none dark:border-slate-800 dark:border-1 border-slate-300 shadow-slate-400 dark:border-0 hover:border-amber-400 transition-all duration-300 hover:border-slate-400/10 max-w-4xl mx-auto">
           <h3 class="text-3xl md:text-4xl font-light dark:text-slate-100 mb-6 tracking-tight">
             <span
@@ -631,9 +631,15 @@
             Responsabilidad Integral
           </h3>
 
-          <p class="text-black dark:text-slate-300/60 font-light text-xl max-w-3xl mx-auto leading-relaxed mb-16">
-
+          <div class="text-black dark:text-slate-300/60 font-light text-xl max-w-3xl mx-auto leading-relaxed mb-16 text-left text-pretty">
+            <p>
+            Desarrollamos herramientas útiles desde etapas tempranas, congruentes a la expectativa del usuario, conjugando la experiencia con los estándares de la industria para garantizar un software confiable que podrá evolucionar con su usted.
+            </p>
+            <div class="my-4"></div>
+            <p>
+            Buscamos así democratizar la excelencia tecnológica ofreciendo a emprendedores y a pequeñas y medianas empresas acceso a soluciones de software de alto nivel que les permitan competir con confianza.
           </p>
+            </div>
 
           <a href="#contact" role="button"
              class="button flex px-12 py-5 bg-amber-200 dark:bg-slate-500/10 backdrop-blur-sm rounded-full border border-slate-400/20 transition-all duration-300 dark:hover:bg-slate-500/20 dark:hover:border-slate-400/40 items-center justify-center">
@@ -648,7 +654,7 @@
     </div>
   </section>
 
-  <section id="contact" class="py-32 bg-gradient-to-b from-[#eef] to-[#cdf] dark:bg-gradient-to-b dark:from-slate-900 dark:to-slate-800 text-slate-800 dark:text-slate-100 relative overflow-hidden">
+  <section id="contact" class="py-32 bg-gradient-to-b from-[#eee] to-[#ddd] dark:bg-gradient-to-b dark:from-slate-900 dark:to-slate-800 text-slate-800 dark:text-slate-100 relative overflow-hidden">
 
     <!-- Minimal decorative element -->
 
@@ -668,7 +674,7 @@
       <div class="grid md:grid-cols-2 gap-16 max-w-5xl mx-auto">
         <!-- Formulario de contacto - clean and minimal -->
         <div
-          class="bg-sky-50 dark:bg-slate-800/50 backdrop-blur-sm rounded-xl p-12 shadow-inner shadow-slate-400 dark:shadow-black dark:shadow-inner transition-all duration-300 hover:border-slate-400/10">
+          class="bg-white dark:bg-slate-700 rounded-xl p-12 shadow-xl shadow-slate-400 dark:shadow-black transition-all duration-300 hover:border-slate-400/10">
           <h3 class="text-2xl md:text-3xl font-light text-base mb-10 tracking-tight">
             Contacte con nosotros
           </h3>
@@ -706,7 +712,7 @@
 
             <button type="submit"
                     id="submit-button"
-                    class="w-full px-10 py-4 bg-slate-500/10 backdrop-blur-sm rounded-lg border border-slate-400/20 transition-all duration-300 hover:bg-slate-500/20 hover:border-slate-400/40 flex items-center justify-center">
+                    class="w-full px-10 py-4 bg-slate-500/10 rounded-lg border border-slate-400/20 transition-all duration-300 hover:bg-slate-500/20 hover:border-slate-400/40 flex items-center justify-center">
               <span class="text-slate-600 dark:text-slate-400 font-light tracking-wide text-sm mr-2">ENVIAR MENSAJE DE CONTACTO <i
                 class="fas fa-paper-plane"></i></span>
 
@@ -717,7 +723,7 @@
         <!-- Información de contacto - clean and minimal -->
         <div class="space-y-8">
           <div
-            class="bg-sky-50 dark:bg-slate-800/50 backdrop-blur-sm rounded-xl p-8 shadow-inner shadow-slate-400 dark:shadow-black dark:shadow-inner transition-all duration-300 hover:border-slate-400/10">
+            class="bg-white dark:bg-slate-800 rounded-xl p-8 shadow-inner shadow-slate-400 dark:shadow-black dark:shadow-inner transition-all duration-300 hover:border-slate-400/10">
             <div class="flex items-start">
               <div class="flex-shrink-0 w-8 h-8 bg-slate-500/5 rounded-lg flex items-center justify-center mr-4">
                 <svg class="w-4 h-4 text-sky-400 dark:text-amber-400/60" viewBox="0 0 24 24" fill="none">
@@ -736,7 +742,7 @@
           </div>
 
           <div
-            class="bg-sky-50 dark:bg-slate-800/50 backdrop-blur-sm rounded-xl p-8 shadow-inner shadow-slate-400 dark:shadow-black dark:shadow-inner transition-all duration-300 hover:border-slate-400/10">
+            class="bg-white dark:bg-slate-800 rounded-xl p-8 shadow-inner shadow-slate-400 dark:shadow-black dark:shadow-inner transition-all duration-300 hover:border-slate-400/10">
             <div class="flex items-start">
               <div class="flex-shrink-0 w-8 h-8 bg-slate-500/5 rounded-lg flex items-center justify-center mr-4">
                 <svg class="w-4 h-4 text-sky-400 dark:text-amber-400/60" viewBox="0 0 24 24" fill="none">
@@ -756,7 +762,7 @@
           </div>
 
           <div
-            class="bg-sky-50 dark:bg-slate-800/50 backdrop-blur-sm rounded-xl p-8 shadow-inner shadow-slate-400 dark:shadow-black dark:shadow-inner transition-all duration-300 hover:border-slate-400/10">
+            class="bg-white dark:bg-slate-800 rounded-xl p-8 shadow-inner shadow-slate-400 dark:shadow-black dark:shadow-inner transition-all duration-300 hover:border-slate-400/10">
             <div class="flex items-start">
               <div class="flex-shrink-0 w-8 h-8 bg-slate-500/5 rounded-lg flex items-center justify-center mr-4">
                 <svg class="w-4 h-4 text-sky-400 dark:text-amber-400/60" viewBox="0 0 24 24" fill="none">
@@ -791,7 +797,7 @@
     </div>
   </section>
 
-  <section id="clients" class="py-32 bg-gradient-to-b from-[#cdf] to-slate-600 dark:bg-gradient-to-b dark:from-slate-800 dark:to-slate-900 relative overflow-hidden">
+  <section id="clients" class="py-32 bg-gradient-to-b from-[#ddd] to-slate-100 dark:bg-gradient-to-b dark:from-slate-800 dark:to-slate-900 relative overflow-hidden">
 
     <!-- Minimal decorative element -->
 
@@ -866,18 +872,18 @@
 </main>
 
 
-<footer class="bg-gradient-to-b from-slate-600 to-slate-800 dark:bg-gradient-to-b dark:from-slate-900 dark:to-slate-950 text-slate-100 py-24 relative overflow-hidden">
+<footer class="bg-gradient-to-b from-slate-100 to-slate-200 dark:bg-gradient-to-b dark:from-slate-900 dark:to-slate-950 text-base-content py-24 relative overflow-hidden">
 
   <div class="max-w-6xl mx-auto px-6 relative z-10">
     <div class="grid md:grid-cols-3 gap-20">
       <!-- Columna 1: Logo y descripción -->
       <div class="space-y-6">
         <div class="flex items-center">
-          <h3 class="text-xl font-light tracking-tight text-white">
+          <h3 class="text-xl font-light tracking-tight text-base-content">
             Software BioBio
           </h3>
         </div>
-        <p class="text-white dark:text-slate-300/50 font-light text-sm leading-relaxed">
+        <p class="text-base-content dark:text-slate-300/50 font-light text-sm leading-relaxed">
           Transformando ideas en soluciones tecnológicas innovadoras desde el corazón de la región del Biobío.
         </p>
         <p class="text-slate-400/30 font-light text-xs">
@@ -887,34 +893,34 @@
 
       <!-- Columna 2: Enlaces rápidos -->
       <div class="space-y-6">
-        <h4 class="text-lg font-light text-white tracking-tight">
+        <h4 class="text-lg font-light text-base-content tracking-tight">
           Enlaces Rápidos
         </h4>
         <ul class="space-y-4">
           <li>
             <a href="#intro"
-               class="text-white dark:text-slate-300/50 hover:text-amber-400 transition-colors duration-300 font-light text-sm flex items-center">
+               class="text-base-content dark:text-slate-300/50 hover:text-amber-400 transition-colors duration-300 font-light text-sm flex items-center">
               <span class="w-1 h-1 bg-slate-400/30 rounded-full mr-2"></span>
               Inicio
             </a>
           </li>
           <li>
             <a href="#services"
-               class="text-white dark:text-slate-300/50 hover:text-amber-400 transition-colors duration-300 font-light text-sm flex items-center">
+               class="text-base-content dark:text-slate-300/50 hover:text-amber-400 transition-colors duration-300 font-light text-sm flex items-center">
               <span class="w-1 h-1 bg-slate-400/30 rounded-full mr-2"></span>
               Servicios
             </a>
           </li>
           <li>
             <a href="#clients"
-               class="text-white dark:text-slate-300/50 hover:text-amber-400 transition-colors duration-300 font-light text-sm flex items-center">
+               class="text-base-content dark:text-slate-300/50 hover:text-amber-400 transition-colors duration-300 font-light text-sm flex items-center">
               <span class="w-1 h-1 bg-slate-400/30 rounded-full mr-2"></span>
               Clientes
             </a>
           </li>
           <li>
             <a href="#contact"
-               class="text-white dark:text-slate-300/50 hover:text-amber-400 transition-colors duration-300 font-light text-sm flex items-center">
+               class="text-base-content dark:text-slate-300/50 hover:text-amber-400 transition-colors duration-300 font-light text-sm flex items-center">
               <span class="w-1 h-1 bg-slate-400/30 rounded-full mr-2"></span>
               Contacto
             </a>
@@ -924,19 +930,19 @@
 
       <!-- Columna 3: Contacto -->
       <div class="space-y-6">
-        <h4 class="text-lg font-light text-white tracking-tight">
+        <h4 class="text-lg font-light text-base-content tracking-tight">
           Contacto
         </h4>
         <div class="space-y-4">
-          <p class="text-white dark:text-slate-300/50 font-light text-sm flex items-center">
-            <svg class="w-3 h-3 mr-2 text-white" viewBox="0 0 16 16" fill="none">
+          <p class="text-base-content dark:text-slate-300/50 font-light text-sm flex items-center">
+            <svg class="w-3 h-3 mr-2 text-base-content" viewBox="0 0 16 16" fill="none">
               <rect x="2" y="4" width="12" height="8" rx="1" stroke="currentColor" stroke-width="0.75" />
               <path d="M2,5 L8,9 L14,5" stroke="currentColor" stroke-width="0.75" />
             </svg>
             <span>contacto@softwarebiobio.com</span>
           </p>
-          <p class="text-white dark:text-slate-300/50 font-light text-sm flex items-center">
-            <svg class="w-3 h-3 mr-2 text-white" viewBox="0 0 16 16" fill="none">
+          <p class="text-base-content dark:text-slate-300/50 font-light text-sm flex items-center">
+            <svg class="w-3 h-3 mr-2 text-base-content" viewBox="0 0 16 16" fill="none">
               <path d="M8,2 C5,2 3,4 3,7 C3,11 8,14 8,14 C8,14 13,11 13,7 C13,4 11,2 8,2 Z"
                     stroke="currentColor" stroke-width="0.75" />
               <circle cx="8" cy="7" r="1.5" stroke="currentColor" stroke-width="0.75" />
