Refine styles: update text colors and headings; adjust footer link colors; integrate DaisyUI for improved design consistency.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         content="software, desarrollo, telemetría, control, arquitectura, microservicios, backend, frontend, consultoría, tecnología, Biobío, Chile, soluciones digitales, sistemas, aplicaciones web, APIs, integración, monitoreo, tiempo real">
   <meta name="author" content="Software BioBio">
   <meta name="theme-color" content="#3b82f6">
+  <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
   <link rel="stylesheet" href="/css/stylesheet.css">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
@@ -879,27 +880,27 @@
       <!-- Columna 1: Logo y descripción -->
       <div class="space-y-6">
         <div class="flex items-center">
-          <h3 class="text-xl font-light tracking-tight text-base-content">
+          <h3 class="text-xl font-light tracking-tight text-amber-400">
             Software BioBio
           </h3>
         </div>
-        <p class="text-base-content dark:text-slate-300/50 font-light text-sm leading-relaxed">
+        <p class="text-slate-500 font-light text-sm leading-relaxed">
           Transformando ideas en soluciones tecnológicas innovadoras desde el corazón de la región del Biobío.
         </p>
-        <p class="text-slate-400/30 font-light text-xs">
+        <p class="text-slate-500 font-light text-xs">
           Tecnología a medida, Soluciones sensatas.
         </p>
       </div>
 
       <!-- Columna 2: Enlaces rápidos -->
       <div class="space-y-6">
-        <h4 class="text-lg font-light text-base-content tracking-tight">
+        <h4 class="text-lg font-light text-amber-400 tracking-tight">
           Enlaces Rápidos
         </h4>
         <ul class="space-y-4">
           <li>
             <a href="#intro"
-               class="text-base-content dark:text-slate-300/50 hover:text-amber-400 transition-colors duration-300 font-light text-sm flex items-center">
+               class="text-slate-500 hover:text-amber-400 transition-colors duration-300 font-light text-sm flex items-center">
               <span class="w-1 h-1 bg-slate-400/30 rounded-full mr-2"></span>
               Inicio
             </a>
@@ -930,7 +931,7 @@
 
       <!-- Columna 3: Contacto -->
       <div class="space-y-6">
-        <h4 class="text-lg font-light text-base-content tracking-tight">
+        <h4 class="text-lg font-light text-amber-400 tracking-tight">
           Contacto
         </h4>
         <div class="space-y-4">
