Refine styles: update header background to transparent for improved design consistency.

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 </div>
 
 <header
-  class="fixed w-full z-50 text-slate-700 dark:text-slate-100 bg-slate-100/70 dark:bg-slate-900/80 backdrop-blur border-b border-transparent dark:border-slate-700/5">
+  class="fixed w-full z-50 text-slate-700 dark:text-slate-100 bg-transparent backdrop-blur border-b border-transparent dark:border-slate-700/5">
   <nav class="container text-transparent mx-auto px-8 flex justify-between items-center" role="navigation"
        aria-label="Main">
     <a href="#intro"
