--- a/index.html
+++ b/index.html
@@ -425,8 +425,7 @@
             </p>
           </div>
 
-          <div
-            class="md:w-2/3 bg-white dark:bg-slate-800/50 rounded-xl p-12 shadow-lg shadow-slate-400 dark:shadow-black dark:shadow-inner transition-all duration-300 hover:border-slate-400/10">
+          <div class="md:w-2/3 bg-white dark:bg-slate-700/50 rounded-xl p-12 shadow-xl shadow-slate-400 dark:shadow-slate-950 transition-all duration-300 hover:border-slate-400/10">
             <h4 class="text-xl md:text-2xl font-light text-base mb-8 tracking-tight">Integración de Dispositivos y
               Protocolos</h4>
             <p class="text-slate-600 dark:text-slate-300 font-light mb-12">
@@ -501,7 +500,7 @@
           </div>
 
           <div
-            class="md:w-2/3 bg-white dark:bg-slate-800/50 backdrop-blur-sm rounded-xl p-12 shadow-xl shadow-slate-400 dark:shadow-black dark:shadow-inner transition-all duration-300 hover:border-slate-400/10">
+            class="md:w-2/3 bg-white dark:bg-slate-700/50 rounded-xl p-12 shadow-lg shadow-slate-400 dark:shadow-slate-950 transition-all duration-300 hover:border-slate-400/10">
             <div class="grid grid-cols-1 md:grid-cols-2 gap-16">
               <div>
                 <h4 class="text-xl md:text-2xl font-light text-base mb-6 tracking-tight">Desarrollo Full-Stack</h4>
@@ -567,7 +566,7 @@
           </div>
 
           <div
-            class="md:w-2/3 bg-white dark:bg-slate-800/50 backdrop-blur-sm rounded-xl p-12 shadow-xl shadow-slate-400 dark:shadow-black dark:shadow-inner transition-all duration-300 hover:border-slate-400/10">
+            class="md:w-2/3 bg-white dark:bg-slate-700/50 backdrop-blur-sm rounded-xl p-12 shadow-xl shadow-slate-400 dark:shadow-slate-950 transition-all duration-300 hover:border-slate-400/10">
             <div class="grid grid-cols-1 md:grid-cols-2 gap-16">
               <div>
                 <h4 class="text-xl md:text-2xl font-light text-base mb-6 tracking-tight">Asesoría y Arquitectura de
@@ -625,7 +624,7 @@
       <div class="mt-40 text-center">
         <div
           class="bg-white dark:bg-slate-800 backdrop-blur-sm rounded-xl p-16 border  shadow-inner
-           dark:shadow-none dark:border-slate-800 dark:border-1 border-slate-300 shadow-slate-400 dark:border-0 hover:border-amber-400 transition-all duration-300 hover:border-slate-400/10 max-w-4xl mx-auto">
+           dark:shadow-slate-950 dark:border-slate-800 dark:border-1 border-slate-300 shadow-slate-400 dark:border-0 hover:border-amber-400 transition-all duration-300 hover:border-slate-400/10 max-w-4xl mx-auto">
           <h3 class="text-3xl md:text-4xl font-light dark:text-slate-100 mb-6 tracking-tight">
             <span
               class="text-transparent bg-clip-text bg-gradient-to-r from-amber-400 to-sky-600 dark:from-slate-400 dark:to-slate-500">Nuestro Compromiso:</span>
