--- a/index.html
+++ b/index.html
@@ -955,7 +955,7 @@
 
     <div class="border-t border-slate-700/5 my-12"></div>
 
-    <div class="text-center text-slate-400/30 font-light text-xs">
+    <div class="text-center text-slate-400 dark:text-slate-800 font-light text-xs">
       <p>&copy; 2025 Software BioBio. Todos los derechos reservados.</p>
       <p class="mt-3 flex items-center justify-center">
         Diseñado y desarrollado con
