Fix typo in Spanish text for improved clarity and correctness.

--- a/index.html
+++ b/index.html
@@ -633,7 +633,7 @@
 
           <div class="text-black dark:text-slate-300/60 font-light text-xl max-w-3xl mx-auto leading-relaxed mb-16 text-left text-pretty">
             <p>
-            Desarrollamos herramientas útiles desde etapas tempranas, congruentes a la expectativa del usuario, conjugando la experiencia con los estándares de la industria para garantizar un software confiable que podrá evolucionar con su usted.
+            Desarrollamos herramientas útiles desde etapas tempranas, congruentes a la expectativa del usuario, conjugando la experiencia con los estándares de la industria para garantizar un software confiable que podrá evolucionar con usted.
             </p>
             <div class="my-4"></div>
             <p>
