Refine styles: update text colors for improved readability and consistency in both light and dark modes.

--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
               <span class="text-transparent bg-clip-text bg-gradient-to-r from-blue-500 to-amber-400 drop-shadow-md">Electro-Informática</span>
             </h3>
 
-            <p class="text-base-content dark:text-slate-300/60 leading-relaxed">
+            <p class="text-slate-500 dark:text-slate-300/60 leading-relaxed">
               Desde el firmware hasta la plataforma de usuario, incluyendo la infraestructura. Usted obtiene una solución
               a medida para resolver su desafío.
             </p>
@@ -493,7 +493,7 @@
               <span class="text-transparent bg-clip-text bg-gradient-to-r from-blue-500 to-amber-400 drop-shadow-md">Aplicaciones Web y Sistemas</span>
             </h3>
 
-            <p class="text-base-content dark:text-slate-300/60 leading-relaxed">
+            <p class="text-slate-500 dark:text-slate-300/60 leading-relaxed">
               Creamos plataformas de gestión, microservicios, dashboards, gestores de contenido personalizado,
               APIs robustas y más. Nuestra experiencia abarca desde startups hasta sistemas a gran escala.
             </p>
@@ -558,7 +558,7 @@
               <span class="text-transparent bg-clip-text bg-gradient-to-r from-blue-500 to-amber-400 drop-shadow-md">Consultorías y Servicios</span>
             </h3>
 
-            <p class="text-base-content dark:text-slate-300/60 leading-relaxed">
+            <p class="text-slate-500 dark:text-slate-300/60 leading-relaxed">
               Le ayudamos a definir la mejor estrategia tecnológica para su proyecto. Aportamos más de 15 años de
               experiencia
               en diferentes industrias para asegurar que su inversión sea sólida y escalable.
@@ -872,7 +872,7 @@
 </main>
 
 
-<footer class="bg-gradient-to-b from-slate-100 to-slate-200 dark:bg-gradient-to-b dark:from-slate-900 dark:to-slate-950 text-base-content py-24 relative overflow-hidden">
+<footer class="bg-gradient-to-b from-slate-100 to-slate-200 dark:bg-gradient-to-b dark:from-slate-900 dark:to-slate-950 text-slate-500 py-24 relative overflow-hidden">
 
   <div class="max-w-6xl mx-auto px-6 relative z-10">
     <div class="grid md:grid-cols-3 gap-20">
@@ -906,21 +906,21 @@
           </li>
           <li>
             <a href="#services"
-               class="text-base-content dark:text-slate-300/50 hover:text-amber-400 transition-colors duration-300 font-light text-sm flex items-center">
+               class="text-slate-500 dark:text-slate-300/50 hover:text-amber-400 transition-colors duration-300 font-light text-sm flex items-center">
               <span class="w-1 h-1 bg-slate-400/30 rounded-full mr-2"></span>
               Servicios
             </a>
           </li>
           <li>
             <a href="#clients"
-               class="text-base-content dark:text-slate-300/50 hover:text-amber-400 transition-colors duration-300 font-light text-sm flex items-center">
+               class="text-slate-500 dark:text-slate-300/50 hover:text-amber-400 transition-colors duration-300 font-light text-sm flex items-center">
               <span class="w-1 h-1 bg-slate-400/30 rounded-full mr-2"></span>
               Clientes
             </a>
           </li>
           <li>
             <a href="#contact"
-               class="text-base-content dark:text-slate-300/50 hover:text-amber-400 transition-colors duration-300 font-light text-sm flex items-center">
+               class="text-slate-500 dark:text-slate-300/50 hover:text-amber-400 transition-colors duration-300 font-light text-sm flex items-center">
               <span class="w-1 h-1 bg-slate-400/30 rounded-full mr-2"></span>
               Contacto
             </a>
@@ -934,15 +934,15 @@
           Contacto
         </h4>
         <div class="space-y-4">
-          <p class="text-base-content dark:text-slate-300/50 font-light text-sm flex items-center">
-            <svg class="w-3 h-3 mr-2 text-base-content" viewBox="0 0 16 16" fill="none">
+          <p class="text-slate-500 dark:text-slate-300/50 font-light text-sm flex items-center">
+            <svg class="w-3 h-3 mr-2 text-slate-500" viewBox="0 0 16 16" fill="none">
               <rect x="2" y="4" width="12" height="8" rx="1" stroke="currentColor" stroke-width="0.75" />
               <path d="M2,5 L8,9 L14,5" stroke="currentColor" stroke-width="0.75" />
             </svg>
             <span>contacto@softwarebiobio.com</span>
           </p>
-          <p class="text-base-content dark:text-slate-300/50 font-light text-sm flex items-center">
-            <svg class="w-3 h-3 mr-2 text-base-content" viewBox="0 0 16 16" fill="none">
+          <p class="text-slate-500 dark:text-slate-300/50 font-light text-sm flex items-center">
+            <svg class="w-3 h-3 mr-2 text-slate-500" viewBox="0 0 16 16" fill="none">
               <path d="M8,2 C5,2 3,4 3,7 C3,11 8,14 8,14 C8,14 13,11 13,7 C13,4 11,2 8,2 Z"
                     stroke="currentColor" stroke-width="0.75" />
               <circle cx="8" cy="7" r="1.5" stroke="currentColor" stroke-width="0.75" />
