--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
 
 <header
   class="fixed w-full z-50 text-slate-700 dark:text-slate-100 bg-transparent backdrop-blur border-b border-transparent dark:border-slate-700/5">
-  <nav class="container text-transparent mx-auto px-8 flex justify-between items-center" role="navigation"
+  <nav class="container text-transparent mx-auto p-4 h-12 flex justify-between items-center" role="navigation"
        aria-label="Main">
     <a href="#intro"
        class="text-md md:text-lg xl:text-2xl font-medium tracking-tight bg-clip-text bg-gradient-to-r from-slate-500 to-slate-400 "
@@ -425,7 +425,7 @@
             </p>
           </div>
 
-          <div class="md:w-2/3 bg-white dark:bg-slate-700/50 rounded-xl p-12 shadow-xl shadow-slate-400 dark:shadow-slate-950 transition-all duration-300 hover:border-slate-400/10">
+          <div class="md:w-2/3 bg-white dark:bg-slate-700/50 rounded-xl p-12 shadow-lg shadow-slate-400 dark:shadow-slate-950 transition-all duration-300 hover:border-slate-400/10">
             <h4 class="text-xl md:text-2xl font-light text-base mb-8 tracking-tight">Integración de Dispositivos y
               Protocolos</h4>
             <p class="text-slate-600 dark:text-slate-300 font-light mb-12">
@@ -566,7 +566,7 @@
           </div>
 
           <div
-            class="md:w-2/3 bg-white dark:bg-slate-700/50 backdrop-blur-sm rounded-xl p-12 shadow-xl shadow-slate-400 dark:shadow-slate-950 transition-all duration-300 hover:border-slate-400/10">
+            class="md:w-2/3 bg-white dark:bg-slate-700/50 backdrop-blur-sm rounded-xl p-12 shadow-lg shadow-slate-400 dark:shadow-slate-950 transition-all duration-300 hover:border-slate-400/10">
             <div class="grid grid-cols-1 md:grid-cols-2 gap-16">
               <div>
                 <h4 class="text-xl md:text-2xl font-light text-base mb-6 tracking-tight">Asesoría y Arquitectura de
@@ -674,7 +674,7 @@
       <div class="grid md:grid-cols-2 gap-16 max-w-5xl mx-auto">
         <!-- Formulario de contacto - clean and minimal -->
         <div
-          class="bg-white dark:bg-slate-700 rounded-xl p-12 shadow-xl shadow-slate-400 dark:shadow-black transition-all duration-300 hover:border-slate-400/10">
+          class="bg-white dark:bg-slate-700 rounded-xl p-12 shadow-lg shadow-slate-400 dark:shadow-black transition-all duration-300 hover:border-slate-400/10">
           <h3 class="text-2xl md:text-3xl font-light text-base mb-10 tracking-tight">
             Contacte con nosotros
           </h3>
