--- a/index.html
+++ b/index.html
@@ -370,13 +370,13 @@
         </h1>
 
         <p class="md:text-lg lg:text-xl text-slate-600 dark:text-slate-300/70 max-w-3xl mx-auto leading-relaxed font-medium mb-16">
-          Tenemos más de 15 años de experiencia profesional de alto impacto en proyectos de telemetría, electro-informática y aplicaciones web de distinto tipo.
+          Más de 15 años de experiencia en proyectos de telemetría, electro-informática y aplicaciones web de distinto tipo.
         </p>
 
         <a href="#contact" role="button"
            class="button inline-block px-12 py-5 bg-amber-200 rounded-full border border-slate-200 transition-all duration-300 hover:bg-amber-100 dark:bg-slate-500/10 dark:border-slate-400/20 dark:hover:bg-slate-500/20 dark:hover:border-slate-400/40">
           <span class="text-slate-700 dark:text-slate-400 font-light text-sm tracking-wide">
-            INICIAR UNA CONVERSACIÓN
+            Aportamos valor
             <i class="fa fa-rocket text-slate-500/80 dark:text-slate-400/80" aria-hidden="true"></i>
           </span>
         </a>
