Refine styles: update icon integration for lists, adjust spacing and alignment, and improve consistency in dark mode styling.

--- a/index.html
+++ b/index.html
@@ -581,48 +581,61 @@
             class="md:w-2/3 bg-white dark:bg-slate-700/50 backdrop-blur-sm rounded-xl p-12 shadow-lg shadow-slate-400 dark:shadow-slate-950 transition-all duration-300 hover:border-slate-400/10">
             <div class="grid grid-cols-1 md:grid-cols-2 gap-16">
               <div>
-                <h4 class="text-xl md:text-2xl font-light  mb-6 tracking-tight">Asesoría y Arquitectura de
+                <h4 class="text-xl md:text-2xl font-light mb-6 tracking-tight">Asesoría y Arquitectura de
                   Soluciones</h4>
-                <p class="text-slate-600 dark:text-slate-300 font-light mb-8 ">
+                <p class="text-slate-600 dark:text-slate-300 font-light mb-8">
                   Le guiamos para tomar las decisiones tecnológicas correctas, asegurando la factibilidad de su
                   proyecto.
                 </p>
 
-                <ul class="text-slate-600 dark:text-slate-300 space-y-5 font-light ">
-                  <li class="flex items-center">
-                    <span class="w-1.5 h-1.5 rounded-full bg-slate-400/40 mr-3"></span>
+                <ul class="text-slate-600 dark:text-slate-300 space-y-5 font-light">
+                  <li class="flex items-start">
+                    <div class="flex-shrink-0 w-8 h-8 bg-slate-500/5 rounded-lg flex items-center justify-center mr-4">
+                      <i class="fa-solid fa-magnifying-glass-chart text-sky-400 dark:text-amber-400/60"></i>
+                    </div>
                     <span>Evaluación de tecnologías</span>
                   </li>
-                  <li class="flex items-center">
-                    <span class="w-1.5 h-1.5 rounded-full bg-slate-400/40 mr-3"></span>
+                  <li class="flex items-start">
+                    <div class="flex-shrink-0 w-8 h-8 bg-slate-500/5 rounded-lg flex items-center justify-center mr-4">
+                      <i class="fa-solid fa-bezier-curve text-sky-400 dark:text-amber-400/60"></i>
+                    </div>
                     <span>Diseño de arquitectura</span>
                   </li>
-                  <li class="flex items-center">
-                    <span class="w-1.5 h-1.5 rounded-full bg-slate-400/40 mr-3"></span>
+                  <li class="flex items-start">
+                    <div class="flex-shrink-0 w-8 h-8 bg-slate-500/5 rounded-lg flex items-center justify-center mr-4">
+                      <i class="fa-solid fa-chess text-sky-400 dark:text-amber-400/60"></i>
+                    </div>
                     <span>Planificación estratégica</span>
                   </li>
                 </ul>
               </div>
 
               <div>
-                <h4 class="text-xl md:text-2xl font-light  mb-6 tracking-tight">Despliegue y Soporte
+                <h4 class="text-xl md:text-2xl font-light mb-6 tracking-tight">Despliegue y Soporte
                   Experto</h4>
-                <p class="text-slate-600 dark:text-slate-300 font-light mb-8 ">
+                <p class="text-slate-600 dark:text-slate-300 font-light mb-8">
                   Integramos la gestión de servidores privados, VPS y servicios Cloud con operación y
                   soporte técnico directo, sin intermediarios.
                 </p>
 
-                <ul class="text-slate-600 dark:text-slate-300 space-y-5 font-light ">
-                  <li class="flex items-center">
-                    <span class="w-1.5 h-1.5 rounded-full bg-slate-400/40 mr-3"></span>
+                <ul class="text-slate-600 dark:text-slate-300 space-y-5 font-light">
+                  <li class="flex items-start">
+                    <div class="flex-shrink-0 w-8 h-8 bg-slate-500/5 rounded-lg flex items-center justify-center mr-4">
+                      <i class="fa-solid fa-server text-sky-400 dark:text-amber-400/60"></i>
+                    </div>
                     <span>Alojamiento web y correo corporativo</span>
                   </li>
-                  <li class="flex items-center">
-                    <span class="w-1.5 h-1.5 rounded-full bg-slate-400/40 mr-3"></span>
+                  <li class="flex items-start">
+                    <div class="flex-shrink-0 w-8 h-8 bg-slate-500/5 rounded-lg flex items-center justify-center mr-4">
+                      <i class="fa-brands fa-aws text-sky-400 dark:text-amber-400/60"></i>
+                    </div>
                     <span>Amazon Web Services</span>
                   </li>
-                  <li class="flex items-center">
-                    <span class="w-1.5 h-1.5 rounded-full bg-slate-400/40 mr-3"></span>
+                  <li class="flex items-start">
+                    <div class="flex-shrink-0 w-8 h-8 bg-slate-500/5 rounded-lg flex items-center justify-center mr-4">
+                      <i class="fa-brands fa-linux text-sky-400 dark:text-amber-400/60"></i>
+                      <i class="fa-brands fa-freebsd ml-2 text-sky-400 dark:text-amber-400/60"></i>
+                    </div>
                     <span>VPS FreeBSD y GNU/Linux</span>
                   </li>
                 </ul>
