Refine text: update Spanish textarea placeholder for improved clarity and user guidance.

--- a/index.html
+++ b/index.html
@@ -732,7 +732,7 @@
                         required
                         rows="4"
                         class="w-full px-5 py-4 rounded-lg bg-white dark:bg-slate-800/50 border border-slate-300 dark:border-slate-700/70 focus:border-slate-400/30 focus:ring-1 focus:ring-slate-400/20 transition-colors text-slate-800 dark:text-slate-100 font-light"
-                        placeholder="Cuéntenos brevemente sobre su proyecto..."></textarea>
+                        placeholder="Escriba aquí su mensaje y le responderemos"></textarea>
             </div>
 
             <button type="submit"
