--- a/index.html
+++ b/index.html
@@ -155,11 +155,11 @@
       .nav-link::after {
           content: '';
           position: absolute;
-          bottom: -2px;
+          bottom: -4px;
           left: 0;
           width: 0;
-          height: 1px;
-          background: white;
+          height: 2px;
+          background: currentColor;
           transition: width 0.3s cubic-bezier(0.23, 1, 0.32, 1);
       }
 
@@ -200,6 +200,22 @@
           border-radius: .5rem;
           z-index: 10000;
           outline: 2px solid #93c5fd
+      }
+      /* Design tokens */
+      :root { --sb-accent: #0A84FF; --sb-surface: #ffffff; --sb-surface-dark: #1E1E1E; }
+
+      /* Focus styles */
+      :where(a, button, input, textarea, select, [role="button"], [role="menuitem"])::-moz-focus-inner { border: 0; padding: 0; }
+      :where(a, button, input, textarea, select, [role="button"], [role="menuitem"]):focus-visible {
+          outline: 2px solid var(--sb-accent);
+          outline-offset: 2px;
+          border-radius: .375rem;
+      }
+
+      /* Respect reduced motion */
+      @media (prefers-reduced-motion: reduce) {
+          *, *::before, *::after { animation: none !important; transition: none !important; }
+          html:focus-within { scroll-behavior: auto; }
       }
   </style>
   <script data-goatcounter="https://softwarebiobio.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
@@ -243,7 +259,7 @@
     <ul class="hidden md:flex space-x-10" role="menubar">
       <li role="none">
         <a href="#intro"
-           class="py-2 px-1 relative font-light  md:text-md xl:text-lg text-slate-600 hover:text-slate-900 dark:text-slate-300 dark:hover:text-slate-100 transition-colors duration-300"
+           class="nav-link py-2 px-1 relative font-light  md:text-md xl:text-lg text-slate-600 hover:text-slate-900 dark:text-slate-300 dark:hover:text-slate-100 transition-colors duration-300"
            role="menuitem">
            <span class="relative flex items-center gap-2">
              <i class="fa-solid fa-house text-slate-500/80 dark:text-slate-400/80 text-xs" aria-hidden="true"></i>
@@ -253,7 +269,7 @@
       </li>
       <li role="none">
         <a href="#services"
-           class="py-2 px-1 relative font-light  md:text-md xl:text-lg text-slate-600 hover:text-slate-900 dark:text-slate-300 dark:hover:text-slate-100 transition-colors duration-300"
+           class="nav-link py-2 px-1 relative font-light  md:text-md xl:text-lg text-slate-600 hover:text-slate-900 dark:text-slate-300 dark:hover:text-slate-100 transition-colors duration-300"
            role="menuitem">
            <span class="relative flex items-center gap-2">
              <i class="fa-solid fa-screwdriver-wrench text-slate-500/80 dark:text-slate-400/80 text-xs" aria-hidden="true"></i>
@@ -263,7 +279,7 @@
       </li>
       <li role="none">
         <a href="#clients"
-           class="py-2 px-1 relative font-light  md:text-md xl:text-lg text-slate-600 hover:text-slate-900 dark:text-slate-300 dark:hover:text-slate-100 transition-colors duration-300"
+           class="nav-link py-2 px-1 relative font-light  md:text-md xl:text-lg text-slate-600 hover:text-slate-900 dark:text-slate-300 dark:hover:text-slate-100 transition-colors duration-300"
            role="menuitem">
            <span class="relative flex items-center gap-2">
              <i class="fa-solid fa-users text-slate-500/80 dark:text-slate-400/80 text-xs" aria-hidden="true"></i>
@@ -273,7 +289,7 @@
       </li>
       <li role="none">
         <a href="#contact"
-           class="py-2 px-1 relative font-light  md:text-md xl:text-lg text-slate-600 hover:text-slate-900 dark:text-slate-300 dark:hover:dark:text-slate-100 transition-colors duration-300"
+           class="nav-link py-2 px-1 relative font-light  md:text-md xl:text-lg text-slate-600 hover:text-slate-900 dark:text-slate-300 dark:hover:text-slate-100 transition-colors duration-300"
            role="menuitem" aria-label="Ir a la sección de contacto">
            <span class="relative flex items-center gap-2">
              <i class="fa-solid fa-envelope text-slate-500/80 dark:text-slate-300/80 " aria-hidden="true"></i>
@@ -1127,9 +1143,10 @@
         const elementPosition = target.getBoundingClientRect().top
         const offsetPosition = elementPosition + window.pageYOffset - headerOffset
 
+        const prefersReduced = window.matchMedia('(prefers-reduced-motion: reduce)').matches
         window.scrollTo({
           top: offsetPosition,
-          behavior: 'smooth'
+          behavior: prefersReduced ? 'auto' : 'smooth'
         })
       }
     })
